codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completed_hook_with_status_message_renders_summary_without_entries_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: history
---
• UserPromptSubmit hook (completed)
  摘要：Hook 状态：Applying OMX prompt routing
