codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 3930
expression: terminal.backend()
---
"                                                                                "
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› Booting MCP server: alpha                                                     "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
