codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__progress_placeholder_shows_anchor_and_recent_progress.snap
---
source: tui/src/chatwidget/tests/session_summary.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› 修复输入框提示 · Applied code changes                                         " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " ")]
"                                                                                "
"  gpt-5.3-codex default · /tmp/project                                          "
