codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__progress_placeholder_shows_recent_progress.snap
---
source: tui/src/chatwidget/tests/session_summary.rs
assertion_line: 16
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Applied code changes                                                          "
"                                                                                "
"  gpt-5.5 default · /tmp/project                                                "
